lib/llm/tests/snapshots/responses_replay__structured_output.snap
---
source: lib/llm/tests/responses_replay.rs
expression: redacted_events(&text)
---
[
  {
    "event": "response.created",
    "data": {
      "type": "response.created",
      "sequence_number": 0,
      "response": {
        "background": false,
        "created_at": 1000000000,
        "id": "[ID]",
        "max_output_tokens": 64,
        "metadata": {},
        "model": "harness-model",
        "object": "response",
        "output": [],
        "parallel_tool_calls": true,
        "service_tier": "auto",
        "status": "in_progress",
        "temperature": 1.0,
        "text": {
          "format": {
            "type": "json_schema",
            "name": "Pkg",
            "schema": {
              "type": "object",
              "properties": {
                "name": {
                  "type": "string"
                },
                "version": {
                  "type": "integer"
                }
              },
              "required": [
                "name",
                "version"
              ],
              "additionalProperties": false
            }
          }
        },
        "tool_choice": "auto",
        "tools": [],
        "top_logprobs": 0,
        "top_p": 1.0,
        "truncation": "disabled",
        "billing": null,
        "completed_at": null,
        "conversation": null,
        "error": null,
        "incomplete_details": null,
        "instructions": null,
        "max_tool_calls": null,
        "previous_response_id": null,
        "prompt": null,
        "prompt_cache_key": null,
        "prompt_cache_retention": null,
        "reasoning": null,
        "safety_identifier": null,
        "usage": null,
        "presence_penalty": 0.0,
        "frequency_penalty": 0.0,
        "store": false
      }
    }
  },
  {
    "event": "response.in_progress",
    "data": {
      "type": "response.in_progress",
      "sequence_number": 1,
      "response": {
        "background": false,
        "created_at": 1000000000,
        "id": "[ID]",
        "max_output_tokens": 64,
        "metadata": {},
        "model": "harness-model",
        "object": "response",
        "output": [],
        "parallel_tool_calls": true,
        "service_tier": "auto",
        "status": "in_progress",
        "temperature": 1.0,
        "text": {
          "format": {
            "type": "json_schema",
            "name": "Pkg",
            "schema": {
              "type": "object",
              "properties": {
                "name": {
                  "type": "string"
                },
                "version": {
                  "type": "integer"
                }
              },
              "required": [
                "name",
                "version"
              ],
              "additionalProperties": false
            }
          }
        },
        "tool_choice": "auto",
        "tools": [],
        "top_logprobs": 0,
        "top_p": 1.0,
        "truncation": "disabled",
        "billing": null,
        "completed_at": null,
        "conversation": null,
        "error": null,
        "incomplete_details": null,
        "instructions": null,
        "max_tool_calls": null,
        "previous_response_id": null,
        "prompt": null,
        "prompt_cache_key": null,
        "prompt_cache_retention": null,
        "reasoning": null,
        "safety_identifier": null,
        "usage": null,
        "presence_penalty": 0.0,
        "frequency_penalty": 0.0,
        "store": false
      }
    }
  },
  {
    "event": "response.output_item.added",
    "data": {
      "type": "response.output_item.added",
      "sequence_number": 2,
      "output_index": 0,
      "item": {
        "type": "message",
        "content": [],
        "id": "[ID]",
        "role": "assistant",
        "status": "in_progress"
      }
    }
  },
  {
    "event": "response.content_part.added",
    "data": {
      "type": "response.content_part.added",
      "sequence_number": 3,
      "item_id": "[ID]",
      "output_index": 0,
      "content_index": 0,
      "part": {
        "type": "output_text",
        "annotations": [],
        "logprobs": [],
        "text": ""
      }
    }
  },
  {
    "event": "response.output_text.delta",
    "data": {
      "type": "response.output_text.delta",
      "sequence_number": 4,
      "item_id": "[ID]",
      "output_index": 0,
      "content_index": 0,
      "delta": "{\"name\":\"",
      "logprobs": []
    }
  },
  {
    "event": "response.output_text.delta",
    "data": {
      "type": "response.output_text.delta",
      "sequence_number": 5,
      "item_id": "[ID]",
      "output_index": 0,
      "content_index": 0,
      "delta": "dynamo\",",
      "logprobs": []
    }
  },
  {
    "event": "response.output_text.delta",
    "data": {
      "type": "response.output_text.delta",
      "sequence_number": 6,
      "item_id": "[ID]",
      "output_index": 0,
      "content_index": 0,
      "delta": "\"version\":1}",
      "logprobs": []
    }
  },
  {
    "event": "response.output_text.done",
    "data": {
      "type": "response.output_text.done",
      "sequence_number": 7,
      "item_id": "[ID]",
      "output_index": 0,
      "content_index": 0,
      "text": "{\"name\":\"dynamo\",\"version\":1}",
      "logprobs": []
    }
  },
  {
    "event": "response.content_part.done",
    "data": {
      "type": "response.content_part.done",
      "sequence_number": 8,
      "item_id": "[ID]",
      "output_index": 0,
      "content_index": 0,
      "part": {
        "type": "output_text",
        "annotations": [],
        "logprobs": [],
        "text": "{\"name\":\"dynamo\",\"version\":1}"
      }
    }
  },
  {
    "event": "response.output_item.done",
    "data": {
      "type": "response.output_item.done",
      "sequence_number": 9,
      "output_index": 0,
      "item": {
        "type": "message",
        "content": [
          {
            "type": "output_text",
            "annotations": [],
            "logprobs": [],
            "text": "{\"name\":\"dynamo\",\"version\":1}"
          }
        ],
        "id": "[ID]",
        "role": "assistant",
        "status": "completed"
      }
    }
  },
  {
    "event": "response.completed",
    "data": {
      "type": "response.completed",
      "sequence_number": 10,
      "response": {
        "background": false,
        "created_at": 1000000000,
        "completed_at": 1000000000,
        "id": "[ID]",
        "max_output_tokens": 64,
        "metadata": {},
        "model": "harness-model",
        "object": "response",
        "output": [
          {
            "type": "message",
            "content": [
              {
                "type": "output_text",
                "annotations": [],
                "logprobs": [],
                "text": "{\"name\":\"dynamo\",\"version\":1}"
              }
            ],
            "id": "[ID]",
            "role": "assistant",
            "status": "completed"
          }
        ],
        "parallel_tool_calls": true,
        "service_tier": "auto",
        "status": "completed",
        "temperature": 1.0,
        "text": {
          "format": {
            "type": "json_schema",
            "name": "Pkg",
            "schema": {
              "type": "object",
              "properties": {
                "name": {
                  "type": "string"
                },
                "version": {
                  "type": "integer"
                }
              },
              "required": [
                "name",
                "version"
              ],
              "additionalProperties": false
            }
          }
        },
        "tool_choice": "auto",
        "tools": [],
        "top_logprobs": 0,
        "top_p": 1.0,
        "truncation": "disabled",
        "usage": {
          "input_tokens": 20,
          "input_tokens_details": {
            "cached_tokens": 0
          },
          "output_tokens": 9,
          "output_tokens_details": {
            "reasoning_tokens": 0
          },
          "total_tokens": 29
        },
        "billing": null,
        "conversation": null,
        "error": null,
        "incomplete_details": null,
        "instructions": null,
        "max_tool_calls": null,
        "previous_response_id": null,
        "prompt": null,
        "prompt_cache_key": null,
        "prompt_cache_retention": null,
        "reasoning": null,
        "safety_identifier": null,
        "presence_penalty": 0.0,
        "frequency_penalty": 0.0,
        "store": false
      }
    }
  },
  {
    "event": "",
    "data": "[DONE]"
  }
]
